    - Fix for prettyprint bug with tables (issue # 158)
    - Fix for serialize in gumbo to limit injected returns
    - Update to Sigil_Plugin_Framework_rev6.epub
    - Make build order of sigilgumbo deterministic in order to help Linux packagers
    - Make plugin launcher success and error messages robust to non-utf-8 strings


Sigil 0.9.0 Release
    - Add "Use Bundled Python" option to bring sanity and choice to Python3 Interpreter selection
    - Merge EmbeddedPython code across platforms and fix python flags for all platforms
    - Properly build translation base.ts to prevent blank message fields being generated by tr()
    - Allow PrettyPrint_Gumbo to condense whitespace where allowed
    - In PluginRunner auto-repair modified xml (opf, ncx), do not check xml with xhtml wellformed check
    - Fix bug in plugin epub3 interface, conversion of properties with null strings to None
    - Restore ability to override hunspell dictionary locations on Linux with SIGIL_DICTIONARIES env var
    - Restore ability to build Sigil against system hunspell libraries on Linux
    - Adjust pluginhunspell.py to try to find system hunspell if bundled hunspell is not built/installed
    - Fix hang/slowness in TOC creation when huge number of headings all exist in the same file
    - Performance speedups for NCX writing to help with slow ToC Creation
    - bug fix for better detecting comments in sanitycheck.py
    - bug fix for Adding Blank xhtml files to an epub3
    - bug fix for Issue 140 - TOC gets cut-off under some platforms (lxml needs utf-8 not unicode)
    - add cmake option INSTALL_BUNDLED_DICTS to enable/disable installation of bundled hunspell dictionaries
    - allow SIGIL_DICTIONARIES env var to specify multiple paths (colon delimited)
    - Fix bug in sanitycheck.py error message creation
    - Identify woff files as fonts when importing epubs
    - Fixes for nbsp being "lost" when linking in stylesheets and when splitting and merging chapters